--- a/portal-web/src/main/resources/templates/index.html
+++ b/portal-web/src/main/resources/templates/index.html
@@ -1469,6 +1469,7 @@
     <script src="/js/main.js"></script>
     <!-- Switcher JS [Please Remove this when Choose your Final Projct] -->
     <script src="layer/layer.js" th:src="@{/layer/layer.js}" type="text/javascript"></script>
+    <script src="/js/solar_token.js" type="text/javascript"></script>
 	<!-- Switcher JS [Please Remove this when Choose your Final Projct] -->
 </body>
 
