--- a/portal-web/src/main/resources/templates/header-phone.html
+++ b/portal-web/src/main/resources/templates/header-phone.html
@@ -2,7 +2,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4" data-th-fragment="header">
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4" data-th-fragment="header-phone">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <body>
 	<header>
