--- a/search-web/src/main/resources/templates/404.html
+++ b/search-web/src/main/resources/templates/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
+<meta charset="UTF-8" xmlns:th="http://www.thymeleaf.org">
 <title>solarcat网上商城-搜索失败</title>
 </head>
 <link href="css/all.css" rel="stylesheet" type="text/css" />
