--- a/sso-web/src/main/resources/templates/login.html
+++ b/sso-web/src/main/resources/templates/login.html
@@ -104,7 +104,7 @@
 				$.post("/user/login", $("#formlogin").serialize(),function(data){
 					if (data.status == 200) {
 						layer.alert('登录成功！',"提示", function(){
-							location.href = "http://localhost:8003/index";
+							location.href = "http://view.solarcat.cn/index";
 						});
 
 					} else {
